Redesigned the theme

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,36 +8,42 @@
 </head>
 <body>
 
-  <!-- Glow Background -->
-  <div class="glow one"></div>
-  <div class="glow two"></div>
+  <section class="landing">
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <h1 class="logo">JOB TRACKER</h1>
+    <!-- LEFT CONTENT -->
+    <div class="content">
+      <h1>Organize & Track<br>Your Job Applications</h1>
 
-    <h2>
-      Track, Organize, and<br />
-      <span>Optimize Your Job Search</span>
-    </h2>
+      <p>
+        Manage all your job applications in one place.
+        Stay organized, track your progress, and land
+        your dream job faster.
+      </p>
 
-    <p>
-      Forget spreadsheets and endless bookmarks.
-      Save, apply, track, and revisit job applications
-      from one streamlined dashboard.
-    </p>
+      <button class="cta">Get Started</button>
+    </div>
 
-    <ul class="features">
-      <li>✔ Centralized Job Tracking</li>
-      <li>✔ Track Key Contacts</li>
-      <li>✔ Job Insights</li>
-    </ul>
+    <!-- RIGHT VISUAL -->
+    <div class="visual">
+      <div class="card">
+        <h3>Apple</h3>
+        <span>Software Engineer</span>
+        <p class="status applied">Applied</p>
+      </div>
 
-    <button class="cta">START TRACKING</button>
+      <div class="card">
+        <h3>Google</h3>
+        <span>UX Designer</span>
+        <p class="status interview">Interview</p>
+      </div>
 
-    <p class="trusted">
-      Our users have landed jobs at top companies
-    </p>
+      <div class="card">
+        <h3>Microsoft</h3>
+        <span>Backend Engineer</span>
+        <p class="status rejected">Rejected</p>
+      </div>
+    </div>
+
   </section>
 
 </body>
