added a new feature section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -78,5 +78,51 @@
 
   </section>
 
+  <!-- FEATURES SECTION -->
+<section class="features-section">
+
+  <h2 class="features-title">
+    Everything You Need to <span>Track Your Job Search</span>
+  </h2>
+
+  <div class="features-grid">
+
+    <div class="feature-card">
+      <h3>📋 Job Tracker</h3>
+      <p>
+        Manage all your job applications in one place.
+        Track status like Applied, Interview, Rejected, or Offer.
+      </p>
+    </div>
+
+    <div class="feature-card">
+      <h3>🗓 Interviews & Schedules</h3>
+      <p>
+        Never miss an interview. View upcoming schedules
+        with calendar-based reminders.
+      </p>
+    </div>
+
+    <div class="feature-card">
+      <h3>📁 Documents</h3>
+      <p>
+        Store resumes and cover letters securely
+        and attach them to specific job applications.
+      </p>
+    </div>
+
+    <div class="feature-card">
+      <h3>📊 Analytics</h3>
+      <p>
+        Visualize your progress with performance charts,
+        success ratios, and application insights.
+      </p>
+    </div>
+
+  </div>
+
+</section>
+
+
 </body>
 </html>
