created the signup and login portal

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,8 +24,9 @@
   </div>
 
   <div class="nav-right">
-    <button class="nav-btn ghost">Login</button>
-    <button class="nav-btn solid">Sign Up</button>
+   <a href="login.html" class="nav-btn ghost">Login</a>
+<a href="signup.html" class="nav-btn solid">Sign Up</a>
+
   </div>
 </nav>
 
@@ -68,7 +69,8 @@
         <li>✔ Job Insights</li>
       </ul>
 
-      <button class="cta">START TRACKING</button>
+      <a href="signup.html" class="cta">START TRACKING</a>
+
     </div>
 
     <!-- RIGHT VISUAL -->
@@ -122,6 +124,57 @@
   </div>
 
 </section>
+
+<!-- FEEDBACK SECTION -->
+<section class="feedback-section">
+
+  <h2 class="feedback-title">
+    What Our Users <span>Say</span>
+  </h2>
+
+  <p class="feedback-subtitle">
+    Real experiences from users who tracked their job search smartly
+  </p>
+
+  <div class="feedback-grid">
+
+    <div class="feedback-card">
+      <p class="feedback-text">
+        “Tracking all my applications in one place helped me stay focused.
+        I finally cracked my first backend role!”
+      </p>
+      <div class="feedback-user">
+        <span class="name">Aman Sharma</span>
+        <span class="role success">Selected – Backend Engineer</span>
+      </div>
+    </div>
+
+    <div class="feedback-card">
+      <p class="feedback-text">
+        “I got rejected multiple times, but reviewing my interview notes
+        showed where I was going wrong. Huge confidence boost.”
+      </p>
+      <div class="feedback-user">
+        <span class="name">Neha Verma</span>
+        <span class="role failure">Rejected – Product Intern</span>
+      </div>
+    </div>
+
+    <div class="feedback-card">
+      <p class="feedback-text">
+        “The interview scheduling and document storage saved me
+        from last-minute panic. Highly recommended.”
+      </p>
+      <div class="feedback-user">
+        <span class="name">Rohit Singh</span>
+        <span class="role success">Selected – Data Analyst</span>
+      </div>
+    </div>
+
+  </div>
+
+</section>
+
 
 
 </body>
