created feedback portal and updated the login and signup portal

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,12 +6,20 @@
 
   <link rel="stylesheet" href="CSS/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
   <!-- NAVBAR -->
 <nav class="navbar">
   <div class="nav-left">
-    <span class="logo">JobTracker</span>
+    <a href="index.html" class="brand">
+    <img src="assets/logo.png" alt="Ascend Logo" class="brand-logo" />
+    <div class="brand-text">
+      <span class="brand-name">Ascend</span>
+      <span class="brand-tagline">Track. Apply. Ascend.</span>
+    </div>
+  </a>
   </div>
 
   <div class="nav-center">
@@ -20,7 +28,8 @@
     <a href="#">Interviews</a>
     <a href="#">Documents</a>
     <a href="#">Analytics</a>
-    <a href="#">Feedback</a>
+    <a href="feedback.html">Feedback</a>
+
   </div>
 
   <div class="nav-right">
@@ -70,6 +79,8 @@
       </ul>
 
       <a href="signup.html" class="cta">START TRACKING</a>
+
+
 
     </div>
 
