--- a/frontend/login.html
+++ b/frontend/login.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="CSS/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 </head>
+<script type="module" src="js/login.js"></script>
 
 <body class="auth-body">
 
@@ -50,12 +51,12 @@
 
         <form>
           <div class="input-group">
-            <input type="email" required />
+           <input type="email" id="email" required />
             <label>Email</label>
           </div>
 
           <div class="input-group">
-            <input type="password" required />
+            <input type="password" id="password" required />
             <label>Password</label>
           </div>
 
