--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="CSS/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 </head>
+<script type="module" src="js/signup.js"></script>
 
 <body class="auth-body">
 
@@ -51,17 +52,17 @@
 
         <form>
           <div class="input-group">
-            <input type="text" required />
+            <input type="text" id="name" required />
             <label>Full Name</label>
           </div>
 
           <div class="input-group">
-            <input type="email" required />
+           <input type="email" id="email" required />
             <label>Email</label>
           </div>
 
           <div class="input-group">
-            <input type="password" required />
+            <input type="password" id="password" required />
             <label>Password</label>
           </div>
 
