debugged the feedback file and connected with backend successfully

--- a/frontend/feedback.html
+++ b/frontend/feedback.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="CSS/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
-<script type="module" src="js/feedback.js"></script>
+
 
 <body class="feedback-body">
    <header class="page-header">
@@ -42,10 +42,11 @@
 
         <div class="form-row">
           <label>Feedback Type</label>
-          <select id="type">
-            <option>Interview Experience</option>
-            <option>Website Feedback</option>
-          </select>
+        <select id="type">
+  <option value="Interview">Interview Experience</option>
+  <option value="Website">Website Feedback</option>
+</select>
+
         </div>
 
         <div class="form-row">
@@ -101,6 +102,6 @@
     </div>
 
   </section>
-
+<script type="module" src="js/feedback.js"></script>
 </body>
 </html>
