--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
     <a href="#">Tracker</a>
     <a href="#">Interviews</a>
     <a href="#">Documents</a>
-    <a href="#">Analytics</a>
+    <a href="login.html">Analytics</a>
     <a href="feedback.html">Feedback</a>
 
   </div>
